# Nokia-PK-2025

.github/workflows/: ccpp.yml
src/: .gitignore  internal_commands.cmake
src/COMMON/Utils/: todo.h  unreachable.hpp
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  SmsStorage.cpp  SmsStorage.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  CallState.cpp  CallState.hpp  ComposeSmsState.cpp  ComposeSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  CreateSmsState.cpp  CreateSmsState.hpp  IncomingCallState.cpp  IncomingCallState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  TalkingState.cpp  TalkingState.hpp  ViewListSmsState.cpp  ViewListSmsState.hpp  ViewSingleSmsState.cpp  ViewSingleSmsState.hpp  ViewSmsState.cpp  ViewSmsState.hpp  ViewingMessageListState.cpp  ViewingMessageListState.hpp  ViewingMessageState.cpp  ViewingMessageState.hpp
src/UE/Tests/Application/: CMakeLists.txt  SmsStorageTestSuite.cpp
src/UE/Tests/Application/Mocks/: IBtsPortMock.hpp  IEventsHandlerMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  BtsPortTestSuiteExtended.cpp  ComposeSmsStateTestSuite.cpp  UserPortTestSuite.cpp  ViewListSmsStateTestSuite.cpp  ViewSmsTestSuite.cpp
src/UE/Tests/Application/States/: IncomingCallStateTestSuite.cpp
